--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Arimo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arimo&family=Montserrat:wght@100&display=swap');
 *{
     padding: 0px;
     margin: 0px;
@@ -9,6 +9,13 @@ body{
     background-image: url('../images/background_image.jpg');
     repeat: no-repeat;
     background-size: cover;
+}
+
+.main{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
 }
 
 #logo{
@@ -45,9 +52,13 @@ body{
     .form{
         margin-left: auto;
         margin-right: auto;
+        margin-left: 0px;
     }
     body{
         padding-left: 0px;
+    }
+    .main{
+        align-items: center;
     }
 }
 .form h3{
@@ -74,6 +85,7 @@ body{
     border-color: #fff;
     border-style: solid;
     border-width: 1px;
+    height: 25px;
     text-shadow: 1px 1px 2px #fff;
 }
 
@@ -93,10 +105,12 @@ body{
 }
 .form #submit:hover{
     cursor: pointer;
-
+    border: solid 1px #fff;
     background-color: hsla(0, 11%, 96%, 0);
     color: #ffffff;
 }
+
+
 
 #footer{
     margin: 25px 0px 0px 10px;
