--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 body{
     padding-left: 15px;
     background-image: url('../images/background_image.jpg');
-    repeat: no-repeat;
+    background-repeat: no-repeat;
     background-size: cover;
 }
 
@@ -21,17 +21,17 @@ body{
 #logo{
     height: 20vh;
     width: 250px;
-    margin: 0px 0px 90px 10px;
+    margin: 0px 0px 60px 10px;
 }
 
 #logo img{
     height: 100%;
     width: 100%;
     object-fit: contain;
+    margin-left: 60px;
 }
 
 .form{
-    /*margin-left: 10px;*/
     border-color: #ffffff;
     border-width: 3.5px;
     border-style: solid;
@@ -46,19 +46,36 @@ body{
     color: #ffffff;
     font-family: 'Arimo', sans-serif;
     transition: box-shadow 0.4s;
-    margin-left: 80px;
+    margin-left: 60px;
+    margin-bottom: 10px;
 }
 @media only screen and (max-width: 600px) {
     .form{
         margin-left: auto;
         margin-right: auto;
         margin-left: 0px;
+        padding: 20px 0px 35px 0px;
     }
     body{
         padding-left: 0px;
+        background-image: url("../images/background_image_mobile.jpg");
+        background-repeat: repeat-y;
+    }
+    .form:hover{
+        box-shadow: 5px 5px 30px rgba(255, 255, 255, 0.5);
+        
+    }
+    #logo img{
+        margin-left: 0px;
     }
     .main{
         align-items: center;
+    }
+    #div3{
+        margin: 10px;
+    }
+    #div3 #footer{
+        padding: 0px;
     }
 }
 .form h3{
@@ -75,8 +92,9 @@ body{
     text-align: center;
     height: 27px;
     width: 200px;
-    border-radius: 10px;
+    border-radius: 15px;
     margin: 10px 0px 20px 0px;
+    
 }
 
 .form input:focus{
@@ -85,6 +103,7 @@ body{
     border-color: #fff;
     border-style: solid;
     border-width: 1px;
+    border-radius:5px;
     height: 25px;
     text-shadow: 1px 1px 2px #fff;
 }
@@ -92,7 +111,7 @@ body{
 .form #submit{
     outline: none;
     font-size: 15px;
-    font-weight: bolder;
+    font-weight: bold;
     width: 100px;
     color: rgb(16, 0, 46);
     height: 30px;
@@ -101,23 +120,25 @@ body{
     padding: 0px 10px 0px 10px;
     margin: 10px 0px 0px 0px;
     font-family: 'Montserrat', sans-serif;
-    transition: box-shadow 0.6s, color 0.6s, background-color 0.6s;
+    transition: box-shadow 0.6s, border-radius 0.6s, color 0.6s, background-color 0.6s;
 }
 .form #submit:hover{
     cursor: pointer;
     border: solid 1px #fff;
     background-color: hsla(0, 11%, 96%, 0);
     color: #ffffff;
+    border-radius: 10px;
+    
 }
 
 
 
 #footer{
-    margin: 25px 0px 0px 10px;
+    margin-top: 45px;
     color: #ffffff;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    
+    padding-left: 100px;
 }
 
 #footer p{
